Closed
Bug 1122420
Opened 7 years ago
Closed 7 years ago
Intermittent browser_tilt_zoom.js | application crashed [@ mozilla::net::CacheIOThread::OnDispatchedEvent(nsIThreadInternal *)]
Categories
(Core :: Networking: Cache, defect)
Core
Networking: Cache
Tracking
()
RESOLVED
FIXED
mozilla41
People
(Reporter: cbook, Assigned: mayhemer)
References
()
Details
(Keywords: crash, intermittent-failure)
Attachments
(1 file)
2.53 KB,
patch
|
michal
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
Sylvestre
:
approval-mozilla-esr38+
|
Details | Diff | Splinter Review |
Windows 7 32-bit fx-team debug test mochitest-devtools-chrome-3 https://treeherder.mozilla.org/logviewer.html#?job_id=1707636&repo=fx-team 19:38:38 WARNING - PROCESS-CRASH | browser/devtools/tilt/test/browser_tilt_zoom.js | application crashed [@ mozilla::net::CacheIOThread::OnDispatchedEvent(nsIThreadInternal *)] 19:38:38 INFO - Crash dump filename: c:\users\cltbld\appdata\local\temp\tmp3grdze.mozrunner\minidumps\96dfde3e-847c-4c0e-ba85-fb37233f9b57.dmp 19:38:38 INFO - Operating system: Windows NT 19:38:38 INFO - 6.1.7601 Service Pack 1 19:38:38 INFO - CPU: x86 19:38:38 INFO - GenuineIntel family 6 model 30 stepping 5 19:38:38 INFO - 8 CPUs 19:38:38 INFO - Crash reason: EXCEPTION_BREAKPOINT 19:38:38 INFO - Crash address: 0x60a80672 19:38:38 INFO - Thread 22 (crashed) 19:38:38 INFO - 0 xul.dll!mozilla::net::CacheIOThread::OnDispatchedEvent(nsIThreadInternal *) [CacheIOThread.cpp:7b98d254877e : 316 + 0x2d] 19:38:38 INFO - eip = 0x60a80672 esp = 0x0b57f4a0 ebp = 0x0b57f4a8 ebx = 0x00000000 19:38:38 INFO - esi = 0x0000013c edi = 0x0b36af90 eax = 0x00000000 ecx = 0x68530ad9 19:38:38 INFO - edx = 0x0011eac9 efl = 0x00000216 19:38:38 INFO - Found by: given as instruction pointer in context 19:38:38 INFO - 1 xul.dll!nsThread::PutEvent(nsIRunnable *,nsThread::nsNestedEventTarget *) [nsThread.cpp:7b98d254877e : 534 + 0xe] 19:38:38 INFO - eip = 0x60969bd8 esp = 0x0b57f4b0 ebp = 0x0b57f4d0 19:38:38 INFO - Found by: call frame info 19:38:38 INFO - 2 xul.dll!nsThread::DispatchInternal(nsIRunnable *,unsigned int,nsThread::nsNestedEventTarget *) [nsThread.cpp:7b98d254877e : 586 + 0x6] 19:38:38 INFO - eip = 0x60965ca2 esp = 0x0b57f4d8 ebp = 0x0b57f4f0 19:38:38 INFO - Found by: call frame info 19:38:38 INFO - 3 xul.dll!nsThread::Dispatch(nsIRunnable *,unsigned int) [nsThread.cpp:7b98d254877e : 597 + 0xf] 19:38:38 INFO - eip = 0x609659e6 esp = 0x0b57f4f8 ebp = 0x0b57f504 19:38:38 INFO - Found by: call frame info 19:38:38 INFO - 4 xul.dll!nsTimerImpl::PostTimerEvent(already_AddRefed<nsTimerImpl>) [nsTimerImpl.cpp:7b98d254877e : 781 + 0x8] 19:38:38 INFO - eip = 0x609690f9 esp = 0x0b57f50c ebp = 0x0b57f560 19:38:38 INFO - Found by: call frame info 19:38:38 INFO - 5 xul.dll!TimerThread::Run() [TimerThread.cpp:7b98d254877e : 278 + 0xd] 19:38:38 INFO - eip = 0x6096b2bf esp = 0x0b57f568 ebp = 0x0b57f5fc 19:38:38 INFO - Found by: call frame info 19:38:38 INFO - 6 xul.dll!nsThread::ProcessNextEvent(bool,bool *) [nsThread.cpp:7b98d254877e : 855 + 0xd] 19:38:38 INFO - eip = 0x6096975f esp = 0x0b57f604 ebp = 0x0b57f6d8 19:38:38 INFO - Found by: call frame info
Comment hidden (Legacy TBPL/Treeherder Robot) |
Updated•7 years ago
|
Component: General → Networking
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 4•7 years ago
|
||
Any ideas what's going on here, Honza?
status-firefox38:
--- → affected
status-firefox39:
--- → affected
status-firefox40:
--- → affected
status-firefox-esr31:
--- → unaffected
Component: Networking → Networking: Cache
Flags: needinfo?(honzab.moz)
OS: Windows 7 → All
Hardware: x86 → All
![]() |
Assignee | |
Comment 5•7 years ago
|
||
The assertion must be extended. We must allow posting a timer event on the thread even after it has reached shutdown indication but it still is inside the even driving loop.
Assignee: nobody → honzab.moz
Status: NEW → ASSIGNED
Flags: needinfo?(honzab.moz)
![]() |
Assignee | |
Comment 6•7 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=0ffb0bf50b4f
Attachment #8591980 -
Flags: review?(michal.novotny)
Updated•7 years ago
|
Attachment #8591980 -
Flags: review?(michal.novotny) → review+
![]() |
Assignee | |
Updated•7 years ago
|
Keywords: checkin-needed
![]() |
Assignee | |
Comment 8•7 years ago
|
||
May need a rebase (interferes with bug 1122070 and bug 1122070)
Reporter | ||
Comment 10•7 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/1163a79fcb99
Comment 11•7 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/1163a79fcb99
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox41:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
Comment 12•7 years ago
|
||
Please nominate this for aurora/beta/esr38 approval when you get a chance.
status-firefox38.0.5:
--- → wontfix
status-firefox-esr38:
--- → affected
Flags: needinfo?(honzab.moz)
![]() |
Assignee | |
Comment 13•7 years ago
|
||
Comment on attachment 8591980 [details] [diff] [review] v1 [Approval Request Comment] If this is not a sec:{high,crit} bug, please state case for ESR consideration: This is only causing test failures (assertion failure) User impact if declined: none (only the complete test runs are in jeopardy) Fix Landed on Version: m-c Risk to taking this patch (and alternatives if risky): zero String or UUID changes made by this patch: none See https://wiki.mozilla.org/Release_Management/ESR_Landing_Process for more info. Approval Request Comment [Feature/regressing bug #]: cache2enable [User impact if declined]: none (only the complete test runs are in jeopardy) [Describe test coverage new/current, TreeHerder]: this is a heavily executed test over all the tree [Risks and why]: zero [String/UUID change made/needed]: none
Flags: needinfo?(honzab.moz)
Attachment #8591980 -
Flags: approval-mozilla-esr38?
Attachment #8591980 -
Flags: approval-mozilla-beta?
Attachment #8591980 -
Flags: approval-mozilla-aurora?
Comment 14•7 years ago
|
||
Comment on attachment 8591980 [details] [diff] [review] v1 Low risk, improve the test suite, taking it.
Attachment #8591980 -
Flags: approval-mozilla-esr38?
Attachment #8591980 -
Flags: approval-mozilla-esr38+
Attachment #8591980 -
Flags: approval-mozilla-beta?
Attachment #8591980 -
Flags: approval-mozilla-beta+
Attachment #8591980 -
Flags: approval-mozilla-aurora?
Attachment #8591980 -
Flags: approval-mozilla-aurora+
You need to log in
before you can comment on or make changes to this bug.
Description
•