Bug 1122420 - Improve after-shutdown dispatch assertion on CacheIOThread. r=michal, a=sledru